--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,10 +3,11 @@
 
 :root {
   --primary: #fe2c55;
-
+  --black: black;
+  --text-color: #333;
   //Default layout
   --default-layout-header-height: 60px;
-  --default-layout-width: 1150px;
+  --default-layout-width: 100%;
 }
 
 * {
@@ -24,4 +25,17 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
+  color: var(--text-color);
+}
+
+button,
+input,
+[tapindex] {
+  outline: none;
+  border: none;
+}
+
+a[href] {
+  color: var(--text-color);
+  text-decoration: none;
 }
