--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,12 +1,76 @@
 .wrapper {
+  --search-border-radius: 92px;
+  --search-height: 46px;
+  --search-top-spacer: 9px;
+
   width: 100%;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
   height: var(--default-layout-header-height, 60px);
   display: flex;
   justify-content: center;
+  max-width: 100;
 }
 
 .inner {
   width: var(--default-layout-width);
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 100%;
+  padding-right: 24px;
+  padding-left: 16px;
+}
+
+.logo {
+  min-width: 300px;
+}
+
+.search {
+  position: relative;
+  min-width: 200px;
+  height: var(--search-height);
+  width: 516px;
+  display: flex;
+  padding-left: 16px;
+  background: rgba(22, 24, 35, 0.06);
+  border-radius: var(--search-border-radius);
+
+  input {
+    flex: 1;
+    height: 100%;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 21px;
+    color: var(--black);
+    background-color: transparent;
+  }
+  &::after {
+    content: '';
+    position: absolute;
+    top: var(--search-top-spacer);
+    right: 52px;
+    height: calc(var(--search-height) - var(--search-top-spacer) * 2);
+    width: 1px;
+    background-color: rgba(22, 24, 35, 0.12);
+  }
+}
+
+.clear {
+}
+
+.loading {
+}
+
+.search-btn {
+  width: 52px;
+  height: 100%;
+  border-top-right-radius: var(--search-border-radius);
+  border-bottom-right-radius: var(--search-border-radius);
+  font-size: 1.8rem;
+  color: rgba(22, 24, 35, 0.34);
+  &:hover {
+    background-color: rgba(22, 24, 35, 0.03);
+    cursor: pointer;
+  }
 }
