--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -2,6 +2,7 @@
   --search-border-radius: 92px;
   --search-height: 46px;
   --search-top-spacer: 9px;
+  --search-button-width: 52px;
 
   width: 100%;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
@@ -26,15 +27,20 @@
   min-width: 300px;
 }
 
+.search,
+.search-result {
+  width: 361px;
+}
+
 .search {
   position: relative;
   min-width: 200px;
   height: var(--search-height);
-  width: 516px;
   display: flex;
   padding-left: 16px;
   background: rgba(22, 24, 35, 0.06);
   border-radius: var(--search-border-radius);
+  border: 1.5px solid transparent;
 
   input {
     flex: 1;
@@ -44,33 +50,57 @@
     line-height: 21px;
     color: var(--black);
     background-color: transparent;
+    caret-color: var(--primary);
   }
+
+  input:not(:placeholder-shown) ~ .search-btn {
+    color: rgba(22, 24, 35, 0.75);
+  }
+
   &::after {
     content: '';
     position: absolute;
     top: var(--search-top-spacer);
-    right: 52px;
+    right: var(--search-button-width);
     height: calc(var(--search-height) - var(--search-top-spacer) * 2);
     width: 1px;
     background-color: rgba(22, 24, 35, 0.12);
   }
+
+  &:focus-within {
+    border-color: rgba(22, 24, 35, 0.2);
+  }
 }
 
-.clear {
+.search-title {
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: rgba(22, 24, 35, 0.5);
 }
 
+.clear,
 .loading {
+  position: absolute;
+  right: calc(var(--search-button-width) + 16px);
+  top: 50%;
+  transform: translateY(-50%);
+  color: rgba(22, 24, 35, 0.34);
 }
 
 .search-btn {
-  width: 52px;
+  width: var(--search-button-width);
   height: 100%;
   border-top-right-radius: var(--search-border-radius);
   border-bottom-right-radius: var(--search-border-radius);
   font-size: 1.8rem;
   color: rgba(22, 24, 35, 0.34);
+
   &:hover {
     background-color: rgba(22, 24, 35, 0.03);
     cursor: pointer;
+  }
+
+  &:active {
+    background-color: rgba(22, 24, 35, 0.06);
   }
 }
