--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -14,6 +14,7 @@
 
 .inner {
   width: var(--default-layout-width);
+  padding: var(--default-layout-horizontal-spacer);
   height: 100%;
   display: flex;
   align-items: center;
@@ -103,4 +104,32 @@
   &:active {
     background-color: rgba(22, 24, 35, 0.06);
   }
+}
+
+.actions {
+  display: flex;
+  align-items: center;
+}
+
+.more-btn {
+  font-size: 2rem;
+  margin-left: 28px;
+  padding: 4px 8px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.action-btn {
+  font-size: 2.2rem;
+  background-color: var(--white);
+  margin: 15px;
+  cursor: pointer;
+}
+
+.user-avatar {
+  width: 32px;
+  height: 32px;
+  object-fit: cover;
+  border-radius: 50%;
+  cursor: pointer;
 }
