--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,10 +4,12 @@
 :root {
   --primary: #fe2c55;
   --black: black;
-  --text-color: #333;
+  --white: #fff;
+  --text-color: #161823;
   //Default layout
   --default-layout-header-height: 60px;
-  --default-layout-width: 100%;
+  --default-layout-width: 1150px;
+  --default-layout-horizontal-spacer: 24px;
 }
 
 * {
@@ -21,7 +23,7 @@ html {
 }
 
 body {
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: TikTokFont;
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
@@ -38,4 +40,44 @@ input,
 a[href] {
   color: var(--text-color);
   text-decoration: none;
+}
+
+//Font embeded
+@font-face {
+  font-family: 'TikTokFont', sans-serif;
+  src: url('/assets/fonts/TikTokFont-Semibold.woff2');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: TikTokFont;
+  src: url('/assets/fonts/TikTokFont-Bold.woff2');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: TikTokFont;
+  src: url('/assets/fonts/TikTokFont-Regular.woff2');
+  font-weight: 400;
+}
+
+//Custom tippy tooltip
+body .tippy-box {
+  border-radius: 8px;
+  font-weight: 800;
+  font-size: 1.6rem;
+  line-height: 2.2rem;
+  background-color: rgba(84, 84, 84, 0.92);
+}
+
+tippy-content {
+  padding: 8px 9px;
+}
+
+.tippy-arrow {
+  color: rgba(84, 84, 84, 0.92);
+}
+
+.tippy-box[data-placement^='bottom'] > tippy-arrow:before {
+  top: -8px;
 }
