--- a/src/Layout/components/Search/Search.module.scss
+++ b/src/Layout/components/Search/Search.module.scss
@@ -1,33 +1,3 @@
-.wrapper {
-  --search-border-radius: 92px;
-  --search-height: 46px;
-  --search-top-spacer: 9px;
-  --search-button-width: 52px;
-
-  width: 100%;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
-  height: var(--default-layout-header-height, 60px);
-  display: flex;
-  justify-content: center;
-  max-width: 100;
-}
-
-.inner {
-  width: var(--default-layout-width);
-  padding: var(--default-layout-horizontal-spacer);
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 100%;
-  padding-right: 24px;
-  padding-left: 16px;
-}
-
-.logo {
-  min-width: 300px;
-}
-
 .search,
 .search-result {
   width: 361px;
@@ -48,6 +18,7 @@
     height: 100%;
     font-weight: 400;
     font-size: 1.6rem;
+    font-family: var(--font-family);
     line-height: 21px;
     color: var(--black);
     background-color: transparent;
@@ -88,6 +59,19 @@
   color: rgba(22, 24, 35, 0.34);
 }
 
+.loading {
+  animation: spinner 1s linear infinite;
+}
+
+@keyframes spinner {
+  from {
+    transform: translateY(-50%) rotate(0);
+  }
+  to {
+    transform: translateY(-50%) rotate(360deg);
+  }
+}
+
 .search-btn {
   width: var(--search-button-width);
   height: 100%;
@@ -104,32 +88,4 @@
   &:active {
     background-color: rgba(22, 24, 35, 0.06);
   }
-}
-
-.actions {
-  display: flex;
-  align-items: center;
-}
-
-.more-btn {
-  font-size: 2rem;
-  margin-left: 28px;
-  padding: 4px 8px;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.action-btn {
-  font-size: 2.2rem;
-  background-color: var(--white);
-  margin: 15px;
-  cursor: pointer;
-}
-
-.user-avatar {
-  width: 32px;
-  height: 32px;
-  object-fit: cover;
-  border-radius: 50%;
-  cursor: pointer;
 }
