--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,9 @@
   --black: black;
   --white: #fff;
   --text-color: #161823;
+
+  --font-family: 'TikTokFont', sans-serif;
+
   //Default layout
   --default-layout-header-height: 60px;
   --default-layout-width: 1150px;
@@ -23,11 +26,39 @@ html {
 }
 
 body {
-  font-family: TikTokFont;
+  font-family: 'TikTokFont', sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
   color: var(--text-color);
+  overflow-y: overlay;
+  height: 1000px;
+}
+
+//Scroball CSS
+html *::-webkit-scrollbar {
+  border-radius: 0;
+  width: 8px;
+}
+
+html ::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(22, 24, 35, 0.06);
+}
+
+html *::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(22, 24, 35, 0.06);
+}
+
+html ::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+html *::-webkit-scrollbar-track {
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 button,
@@ -44,7 +75,7 @@ a[href] {
 
 //Font embeded
 @font-face {
-  font-family: 'TikTokFont', sans-serif;
+  font-family: var(--font-family);
   src: url('/assets/fonts/TikTokFont-Semibold.woff2');
   font-weight: 600;
 }
