--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -23,6 +23,7 @@
     color: var(--black);
     background-color: transparent;
     caret-color: var(--primary);
+    padding-right: 40px;
   }
 
   input:not(:placeholder-shown) ~ .search-btn {
